Убрана лишняя ссылка, изменены паддинги в навигации

--- a/style.scss
+++ b/style.scss
@@ -39,7 +39,7 @@ html {
   width: 100%;
   background-color: rgba(250, 237, 0, 0.9);
   z-index: 1;
-  padding: $top-bottom-padding $left-right-padding;
+  padding: 1rem 1rem;
 
   .toggle-button {
     width: 3rem;
@@ -147,7 +147,6 @@ html {
   padding: $top-bottom-padding $left-right-padding;
 
   .project {
-    margin-left: 2rem;
 
     .project__container {
       display: block;
@@ -310,6 +309,7 @@ html {
       align-items: center;
       justify-content: space-around;
       margin-bottom: 3rem;
+      margin-left: 2rem;
 
       .project__container {
         width: 30rem;
