--- a/_varibles.scss
+++ b/_varibles.scss
@@ -1,8 +1,8 @@
-$text-color: #ABABAB;
+$text-color: #ababab;
 $background-color: rgb(23, 23, 23);
 $background-additional-color: rgb(53, 53, 53);
 $accent-color: #faed00;
 
-$left-right-padding: 2rem;
-$top-bottom-padding: 2rem;
+$left-right-padding: 1rem;
+$top-bottom-padding: 1rem;
 $border-width: 1.5px;
