--- a/style.scss
+++ b/style.scss
@@ -24,7 +24,7 @@ html {
     width: 100%;
     height: 100vh;
     background-color: rgba(23, 23, 23, 0.9);
-    clip-path: polygon(0 100%, 0 0, 100% 80%, 100% 100%);
+    clip-path: polygon(0 100%, 0 0, 100% 54%, 100% 100%);
     z-index: 1;
   }
 
@@ -33,13 +33,18 @@ html {
     top: 50%;
     left: 20%;
   }
+
+  h2 {
+    position: absolute;
+    top: 60%;
+    left: 20%;
+  }
 }
 
 .nav-bar {
   width: 100%;
-  background-color: rgba(250, 237, 0, 0.9);
+  background-color: rgba(250, 237, 0);
   z-index: 1;
-  padding: 1rem 1rem;
 
   .toggle-button {
     width: 3rem;
@@ -51,6 +56,7 @@ html {
     vertical-align: middle;
     -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
     outline: none;
+    margin-left: 1rem;
 
     .toggle-button__bar {
       width: 100%;
@@ -69,7 +75,7 @@ html {
     list-style: none;
 
     .nav-bar__item {
-      padding: 0.3rem 0;
+      padding: 0.5rem 0;
 
       a {
         text-decoration: none;
@@ -78,6 +84,27 @@ html {
         p {
           font-family: inherit;
           color: $background-color;
+        }
+      }
+    }
+
+    .nav-bar__item-button {
+      padding: 0.5rem 0.3rem;
+      background-color: $background-additional-color;
+
+      button {
+        border: none;
+        background-color: transparent;
+        font-family: inherit;
+        font-weight: bold;
+        font-size: 1rem;
+        cursor: pointer;
+        color: $text-color;
+      }
+
+      &:hover {
+        button {
+          color: $accent-color;
         }
       }
     }
@@ -94,6 +121,11 @@ html {
 #about {
   background-color: $background-additional-color;
   padding: $top-bottom-padding $left-right-padding;
+
+  a {
+    text-decoration: none;
+    color: $accent-color;
+  }
 
   .about__container {
     display: flex;
@@ -132,7 +164,7 @@ html {
       display: flex;
       justify-content: space-between;
       align-items: center;
-      margin: 1.5rem 1.5rem;
+      margin: 1rem;
 
       img {
         height: 2rem;
@@ -147,39 +179,36 @@ html {
   padding: $top-bottom-padding $left-right-padding;
 
   .project {
-
     .project__container {
       display: block;
       border: $border-width solid $accent-color;
       padding: 0.5rem 0.5rem;
       text-decoration: none;
       color: inherit;
-      -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
-  
+
       .project__screenshot {
         width: 100%;
         height: auto;
       }
-  
+
       .project__title {
         margin: 1rem auto;
       }
-  
+
       .project__description {
         margin-bottom: 1rem;
       }
     }
-  
+
     .project__links {
       margin: 2rem auto;
       display: flex;
       justify-content: space-around;
-  
+
       a {
         text-decoration: none;
         cursor: pointer;
-        -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
-  
+
         img {
           height: 3rem;
           width: auto;
@@ -195,7 +224,6 @@ html {
 
   .contacts__links {
     list-style: none;
-    margin: 1rem auto;
     display: flex;
     justify-content: space-around;
     align-items: center;
@@ -210,7 +238,7 @@ html {
 
         img {
           height: 3rem;
-          width: auto;
+          width: 3rem;
         }
       }
     }
@@ -219,7 +247,7 @@ html {
 
 .footer {
   background-color: $accent-color;
-  padding: $top-bottom-padding $left-right-padding;
+  padding: 0.5rem;
 
   p {
     text-align: center;
@@ -268,12 +296,11 @@ html {
 }
 
 @media (min-width: 45rem) {
-
   .nav-bar {
     .toggle-button {
       display: none;
     }
-  
+
     .nav-bar__items {
       display: flex;
       flex-direction: row;
@@ -283,6 +310,10 @@ html {
   #about {
     .about__container {
       flex-direction: row;
+    }
+
+    .about__text-section {
+      max-width: 50%;
     }
   }
 
@@ -321,14 +352,14 @@ html {
         transform: scale(1.05);
         transition: 0.5s;
       }
-    
+
       .project__container:not(:hover) {
         transform: scale(1);
         transition: 0.5s;
       }
 
       .project__links {
-        height: 20rem;
+        height: 10rem;
         flex-direction: column;
         align-items: center;
         justify-content: space-around;
@@ -340,6 +371,8 @@ html {
 @media (min-width: 60rem) {
   #projects {
     .project {
+      margin-bottom: 2rem;
+
       .project__container {
         display: flex;
         flex-direction: row;
@@ -347,9 +380,15 @@ html {
 
         .project__screenshot {
           width: 60%;
+          height: 100%;
           margin-bottom: 0;
           margin-right: 1rem;
+          align-self: center;
         }
+      }
+
+      .project__links {
+        margin: 0 auto;
       }
     }
   }
