--- a/style.scss
+++ b/style.scss
@@ -48,7 +48,10 @@ html {
     width: 100px;
     height: 100px;
     border-radius: 100%;
-    left: 45%;
+    left: 50%;
+    -webkit-transform: translateX(-50%);
+    -ms-transform: translateX(-50%);
+    transform: translateX(-50%);
     bottom: 9rem;
     cursor: pointer;
 
