--- a/style.scss
+++ b/style.scss
@@ -21,7 +21,7 @@ html {
       no-repeat border-box;
   position: relative;
 
-  .header__background-image {
+  &__background-image {
     width: 100%;
     height: 100vh;
     background-color: rgba(23, 23, 23, 0.9);
@@ -62,38 +62,38 @@ html {
       width: 30px;
       background: $accent-color;
       transition: 0.4s ease;
-    }
 
-    span:first-child {
-      display: block;
-      position: absolute;
-      transform: rotate(45deg);
-      left: 25%;
-      bottom: 35%;
-    }
+      &:first-child {
+        display: block;
+        position: absolute;
+        transform: rotate(45deg);
+        left: 25%;
+        bottom: 35%;
+      }
 
-    span:nth-child(2) {
-      display: block;
-      position: absolute;
-      transform: rotate(-45deg);
-      left: 45%;
-      bottom: 35%;
-    }
+      &:nth-child(2) {
+        display: block;
+        position: absolute;
+        transform: rotate(-45deg);
+        left: 45%;
+        bottom: 35%;
+      }
 
-    span:nth-child(3) {
-      display: block;
-      position: absolute;
-      transform: rotate(45deg);
-      left: 25%;
-      bottom: 54%;
-    }
+      &:nth-child(3) {
+        display: block;
+        position: absolute;
+        transform: rotate(45deg);
+        left: 25%;
+        bottom: 54%;
+      }
 
-    span:nth-child(4) {
-      display: block;
-      position: absolute;
-      transform: rotate(-45deg);
-      left: 45%;
-      bottom: 54%;
+      &:nth-child(4) {
+        display: block;
+        position: absolute;
+        transform: rotate(-45deg);
+        left: 45%;
+        bottom: 54%;
+      }
     }
 
     &:hover span:nth-child(1) {
@@ -139,7 +139,7 @@ html {
     }
   }
 
-  .nav-bar__items {
+  &__items {
     display: none;
     flex-direction: column;
     align-items: center;
@@ -315,28 +315,28 @@ html {
   padding: $top-bottom-padding $left-right-padding;
 
   .project {
-    .project__container {
+    &__container {
       display: block;
       border: $border-width solid $accent-color;
       padding: 0.5rem 0.5rem;
       text-decoration: none;
       color: inherit;
-
-      .project__screenshot {
-        width: 100%;
-        height: auto;
-      }
-
-      .project__title {
-        margin: 1rem auto;
-      }
-
-      .project__description {
-        margin-bottom: 1rem;
-      }
     }
 
-    .project__links {
+    &__screenshot {
+      width: 100%;
+      height: auto;
+    }
+
+    &__title {
+      margin: 1rem auto;
+    }
+
+    &__description {
+      margin-bottom: 1rem;
+    }
+
+    &__links {
       margin: 2rem auto;
       display: flex;
       justify-content: space-around;
@@ -429,7 +429,7 @@ html {
   }
 }
 
-@keyframes dropup {
+@keyframes raise {
   from {
     height: 12rem;
   }
@@ -445,7 +445,7 @@ html {
       display: none;
     }
 
-    .nav-bar__items {
+    &__items {
       display: flex;
       flex-direction: row;
     }
@@ -486,23 +486,23 @@ html {
       margin-bottom: 3rem;
       margin-left: 2rem;
 
-      .project__container {
+      &__container {
         width: 30rem;
         height: auto;
         margin-right: 2rem;
       }
 
-      .project__container:hover {
+      &__container:hover {
         transform: scale(1.05);
         transition: 0.5s;
       }
 
-      .project__container:not(:hover) {
+      &__container:not(:hover) {
         transform: scale(1);
         transition: 0.5s;
       }
 
-      .project__links {
+      &__links {
         height: 10rem;
         flex-direction: column;
         align-items: center;
@@ -517,21 +517,21 @@ html {
     .project {
       margin-bottom: 2rem;
 
-      .project__container {
+      &__container {
         display: flex;
         flex-direction: row;
         width: 80%;
-
-        .project__screenshot {
-          width: 60%;
-          height: 100%;
-          margin-bottom: 0;
-          margin-right: 1rem;
-          align-self: center;
-        }
       }
 
-      .project__links {
+      &__screenshot {
+        width: 60%;
+        height: 100%;
+        margin-bottom: 0;
+        margin-right: 1rem;
+        align-self: center;
+      }
+
+      &__links {
         margin: 0 auto;
       }
     }
